# sbux-kb-lite

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
evals/: README.md  __main__.py  base.py  eval_abstention.py  eval_consistency.py  eval_content.py  eval_faithfulness.py  eval_retrieval.py  eval_structure.py  runner.py
evals/data/: abstention.yaml  consistency.yaml  (+2 more)
schema/: categories.md  wiki-rules.md
scripts/: config.py  crawl.py  evaluate.py  gen_remaining.py  ingest.py  ingest_local.py  lint.py  query.py
sources/: arabica-vs-robusta.md  barista-training.md  blonde-roast-explained.md  brazil-coffee-production.md  cafe-practices-certification.md  caramel-macchiato-story.md  china-localization-strategy.md  china-market-growth.md  city-mug-collection.md  coffee-bean-knowledge.md  coffee-caffeine-facts.md  coffee-cupping-guide.md  coffee-flavor-wheel.md  coffee-grind-size.md  coffee-processing-methods.md  coffee-roasting-basics.md  coffee-water-quality.md  cold-brew-method.md  colombia-coffee.md  community-engagement.md  customer-name-on-cup.md  dark-roast-character.md  decaf-coffee-process.md  digital-third-place.md  espresso-science.md  ethiopia-coffee-origin.md  frappuccino-history.md  free-wifi-policy.md  french-press-brewing.md  global-expansion-timeline.md  green-apron-black-apron.md  greener-store-program.md  guatemala-coffee.md  howard-schultz-story.md  il-giornale-founding.md  kenya-coffee-flavor.md  latte-art-basics.md  liberica-coffee.md  logo-evolution-history.md  logo-siren-mythology.md  (+60 more)
wiki/: index.md  log.md
(+104 files in other folders)
