[project]
name = "sbux-kb-lite"
version = "0.1.0"
description = "Lightweight knowledge base for Starbucks AI ordering — LLM Wiki pattern replacing RAG"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
